[package]
name = "raroescucha-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "raroescucha-bot"

[[bin]]
path = "src/exporter.rs"
name = "raroescucha-exporter"

# [features]
# default = ["native-tls", "ctrlc_handler", "teloxide-core/default",  "auto-send"]
# sqlite-storage = ["sqlx", "sqlx/runtime-tokio-native-tls", "native-tls"]

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "json", "sqlite"] }

[dev-dependencies]
mockito = "1.0.2"
tokio-test = "0.4.2"
